--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -2,34 +2,21 @@
 
 dependency:
   name: galaxy
+  enabled: yes
+  options:
+    ignore-certs: yes
+    ignore-errors: yes
+    role-file: >-
+      ${MOLECULE_SCENARIO_DIRECTORY}/../resources/requirements.yml
+    requirements-file: >-
+      ${MOLECULE_SCENARIO_DIRECTORY}/../resources/requirements.yml
 driver:
   name: docker
-lint: |
-  set -e
-  export ANSIBLE_ACTION_PLUGINS=$PWD/action_plugins
-  export ANSIBLE_BECOME_PLUGINS=$PWD/become_plugins
-  export ANSIBLE_CACHE_PLUGINS=$PWD/cache_plugins
-  export ANSIBLE_CALLBACK_PLUGINS=$PWD/callback_plugins
-  export ANSIBLE_CLICONF_PLUGINS=$PWD/cliconf_plugins
-  export ANSIBLE_CONNECTION_PLUGINS=$PWD/connection_plugins
-  export ANSIBLE_DOC_FRAGMENT_PLUGINS=$PWD/doc_fragment_plugins
-  export ANSIBLE_FILTER_PLUGINS=$PWD/filter_plugins
-  export ANSIBLE_HTTPAPI_PLUGINS=$PWD/httpapi_plugins
-  export ANSIBLE_INVENTORY_PLUGINS=$PWD/inventory_plugins
-  export ANSIBLE_LIBRARY=$PWD/library
-  export ANSIBLE_LOOKUP_PLUGINS=$PWD/lookup_plugins
-  export ANSIBLE_NETCONF_PLUGINS=$PWD/netconf_plugins
-  export ANSIBLE_STRATEGY_PLUGINS=$PWD/strategy_plugins
-  export ANSIBLE_TERMINAL_PLUGINS=$PWD/terminal_plugins
-  export ANSIBLE_TEST_PLUGINS=$PWD/test_plugins
-  export ANSIBLE_VARS_PLUGINS=$PWD/vars_plugins
-  yamllint .
-  ansible-lint
-  flake8
+lint: "${MOLECULE_SCENARIO_DIRECTORY}/../resources/linters.sh"
 platforms:
   - name: "centos7-${INSTANCE_UUID:-1}"
     image: centos:7
-    dockerfile: ../resources/Dockerfile.j2
+    dockerfile: ../resources/Dockerfile.systemd.j2
     command: /sbin/init
     tmpfs:
       - /run
@@ -40,9 +27,22 @@ platforms:
       - molecule_hosts
       - molecule_hosts_centos
       - molecule_hosts_centos_7
-  - name: "fedora29-${INSTANCE_UUID:-1}"
-    image: fedora:29
-    dockerfile: ../resources/Dockerfile.j2
+  - name: "centos8-${INSTANCE_UUID:-1}"
+    image: centos:8
+    dockerfile: ../resources/Dockerfile.systemd.j2
+    command: /sbin/init
+    tmpfs:
+      - /run
+      - /tmp
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+    groups:
+      - molecule_hosts
+      - molecule_hosts_centos
+      - molecule_hosts_centos_78
+  - name: "fedora33-${INSTANCE_UUID:-1}"
+    image: fedora:33
+    dockerfile: ../resources/Dockerfile.systemd.j2
     command: /sbin/init
     tmpfs:
       - /run
@@ -52,10 +52,10 @@ platforms:
     groups:
       - molecule_hosts
       - molecule_hosts_fedora
-      - molecule_hosts_fedora_29
-  - name: "fedora30-${INSTANCE_UUID:-1}"
-    image: fedora:30
-    dockerfile: ../resources/Dockerfile.j2
+      - molecule_hosts_fedora_33
+  - name: "fedora34-${INSTANCE_UUID:-1}"
+    image: fedora:34
+    dockerfile: ../resources/Dockerfile.systemd.j2
     command: /sbin/init
     tmpfs:
       - /run
@@ -65,9 +65,12 @@ platforms:
     groups:
       - molecule_hosts
       - molecule_hosts_fedora
-      - molecule_hosts_fedora_30
+      - molecule_hosts_fedora_34
 provisioner:
   name: ansible
+  playbooks:
+    cleanup: ../resources/cleanup.yml
+    side_effect: ../resources/side_effect.yml
   config_options:
     defaults:
       callback_whitelist: profile_tasks
