--- a/molecule/absent/verify.yml
+++ b/molecule/absent/verify.yml
@@ -4,7 +4,8 @@
   hosts: molecule_hosts
   gather_facts: no
   tasks:
-    - meta: flush_handlers
+    - name: Flush handlers
+      meta: flush_handlers
 
     - name: Search application dirs
       stat:
