--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -4,5 +4,6 @@
   hosts: molecule_hosts
   gather_facts: no
   tasks:
+    - include_tasks: ../resources/java.yml
     - include_tasks: ../resources/tomcat.yml
     - include_tasks: ../resources/war.yml
