--- a/meta/main.yml
+++ b/meta/main.yml
@@ -36,24 +36,8 @@ dependencies:
         - tomcat_application_name
 
   - role: amtega.packages
-    vars:
-      packages_os:
-        all:
-          all:
-            procps-ng: present
-        centos:
-          7:
-            python-lxml: present
-          8:
-            python3-lxml: present
-        fedora:
-          all:
-            python3-lxml: present
-        redhat:
-          7:
-            python-lxml: present
-          8:
-            python3-lxml: present
+    tags:
+      - never    
 
   - role: amtega.artifact
     tags:
